--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
     "mailgun.js": "^10.2.1",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "uid2": "^1.0.0"
   }
 }
