--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "form-data": "^4.0.0",
     "mailgun.js": "^10.2.1",
     "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "uid2": "^1.0.0"
   }
 }
